# todo

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
nginx/: nginx.conf
todo/: settings.py  urls.py
todolist/: admin.py  models.py  serializers.py  tests.py  utils.py  views.py
todolist/migrations/: 0001_initial.py  0002_auto_20210310_1635.py  0003_todo_type.py  0006_auto_20210310_2134.py
web/: Dockerfile
web/todo/: settings.py  urls.py
web/todolist/: admin.py  serializers.py  tests.py  views.py
web/todolist/migrations/: 0001_initial.py  0002_auto_20210310_1635.py  0004_auto_20210310_1809.py  0005_auto_20210310_1845.py
